--- a/docs/team/tswuxia.adoc
+++ b/docs/team/tswuxia.adoc
@@ -12,62 +12,66 @@ This document is to document my contributions to the desktop application `EzWatc
 == Overview
 
 EzWatchlist is a desktop application where the user can systematically record down what movie/TV series he/she wants to
-watch or has watched. It is developed based on the Addressbook level 3 provided in the software engineering course.
-The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 10 kLoC.
+watch or has watched. It is developed by a group of 5 NUS Computer Science students for the software engineering course
+based on the Addressbook level 3 codebase provided. One specification is that the user prefers command line interface
+(CLI), hence the CLI in the application. However, we also implemented a graphical user interface (GUI) created with
+JavaFX. The project is written in Java.
 
 == Summary of contributions
 
-* *Major enhancement*: added *the ability to undo/redo previous commands*
-** What it does: allows the user to undo all previous commands one at a time. Preceding undo commands can be reversed by using the redo command.
-** Justification: This feature improves the product significantly because a user can make mistakes in commands and the app should provide a convenient way to rectify them.
-** Highlights: This enhancement affects existing commands and commands to be added in future. It required an in-depth analysis of design alternatives. The implementation too was challenging as it required changes to existing commands.
-** Credits: _{mention here if you reused any code/ideas from elsewhere or if a third-party library is heavily used in the feature so that a reader can make a more accurate judgement of how much effort went into the feature}_
+=== *Major enhancement*:
 
-* *Minor enhancement*: added a history command that allows the user to navigate to previous commands using up/down keys.
+Changed the *GUI* to better suit EzWatchlist
 
-* *Code contributed*: [https://github.com[Functional code]] [https://github.com[Test code]] _{give links to collated code files}_
+* *What it does:*
+** Structures the features into 4 tabs and links them together with the main logic which allows the user to easily
+navigate around the tabs and execute commands.
+** Ensures that each visible component is displayed with an appropriate size, appearance, space and position.
+** Enhances user experience through user-friendly layout and placeholder text and loading signs to keep the user informed.
+** Enhances user experience through a creative theme.
 
-* *Other contributions*:
+* *Justification:*
+** This feature improves the product significantly because a user would like to use an application that is user friendly
+and has an appealing appearance.
 
-** Project management:
-*** Managed releases `v1.3` - `v1.5rc` (3 releases) on GitHub
+* *Highlights:*
+** This enhancement requires deep understanding of both the implementation of the application itself and also how to use
+javafx flexibly in order to effectively communicate between the user and the application and present the message in a
+desirable manner. It also requires repetitive adjustments and testing of the appearance of the elements to produce a
+final result.
+
+
+=== *Minor enhancement*:
+
+Added a `Statistics` feature that reflects the user's personal preferences.
+
+=== *Code contributed*:
+Code contributed can be found here: [https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=tswuxia&sort=groupTitle&sortWithin=title&since=2019-09-06&timeframe=commit&mergegroup=false&groupSelect=groupByRepos&breakdown=false&tabOpen=true&tabType=authorship&tabAuthor=tswuxia&tabRepo=AY1920S1-CS2103T-F13-4%2Fmain%5Bmaster%5D[My Code Contribution]]
+
+=== *Other contributions*:
+
 ** Enhancements to existing features:
-*** Updated the GUI color scheme (Pull requests https://github.com[#33], https://github.com[#34])
-*** Wrote additional tests for existing features to increase coverage from 88% to 92% (Pull requests https://github.com[#36], https://github.com[#38])
-** Documentation:
-*** Did cosmetic tweaks to existing contents of the User Guide: https://github.com[#14]
-** Community:
-*** PRs reviewed (with non-trivial review comments): https://github.com[#12], https://github.com[#32], https://github.com[#19], https://github.com[#42]
-*** Contributed to forum discussions (examples:  https://github.com[1], https://github.com[2], https://github.com[3], https://github.com[4])
-*** Reported bugs and suggestions for other teams in the class (examples:  https://github.com[1], https://github.com[2], https://github.com[3])
-*** Some parts of the history feature I added was adopted by several other class mates (https://github.com[1], https://github.com[2])
-** Tools:
-*** Integrated a third party library (Natty) to the project (https://github.com[#42])
-*** Integrated a new Github plugin (CircleCI) to the team repo
-
-_{you can add/remove categories in the list above}_
+*** Updated the GUI color scheme (Pull request https://github.com/AY1920S1-CS2103T-F13-4/main/pull/123[#123])
+*** Reported bugs and suggestions for other teams in the class (examples:  https://github.com/tswuxia/ped/issues/7[1],
+https://github.com/tswuxia/ped/issues/6[2], https://github.com/tswuxia/ped/issues/5[3], https://github.com/tswuxia/ped/issues/4[4],
+https://github.com/tswuxia/ped/issues/3[5], https://github.com/tswuxia/ped/issues/2[6], https://github.com/tswuxia/ped/issues/1[7])
 
 == Contributions to the User Guide
-
-
 |===
-|_Given below are sections I contributed to the User Guide. They showcase my ability to write documentation targeting end-users._
+|_Given below are sections I contributed to the User Guide. They showcase my ability to write user documentation targeting normal
+application users in a clear and understandable manner._
 |===
 
-include::../UserGuide.adoc[tag=delete]
-
-include::../UserGuide.adoc[tag=dataencryption]
+include::../UserGuide.adoc[tag=UI]
 
 == Contributions to the Developer Guide
 
 |===
-|_Given below are sections I contributed to the Developer Guide. They showcase my ability to write technical documentation and the technical depth of my contributions to the project._
+|_Given below are sections I contributed to the Developer Guide. They showcase my ability to write technical documentation
+and the technical depth of my contributions to the project._
 |===
 
-include::../DeveloperGuide.adoc[tag=undoredo]
-
-include::../DeveloperGuide.adoc[tag=dataencryption]
-
+include::../DeveloperGuide.adoc[tag=statistics]
 
 == PROJECT: PowerPointLabs
 
